# michbday

./: README.md  main.py  michbday.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-test-pypi.yml
