[tool.poetry]
name = "michbday"
version = "2.0.0"
description = "Wishing mich a happy bday"
authors = ["Chris Bama <chrisbama92@gmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = '^3.9'
art = '5.1'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"